# Github-MCP-PR-Reviewer

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  claude_desktop_config.json.example  github_pr_mcp.py  install.sh  pyproject.toml  pytest.ini  test_github_pr_mcp.py
examples/sample-go-project/: .golangci.yml  go.mod  main.go  main_test.go
