[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-pr-reviewer-mcp"
version = "1.0.0"
description = "MCP server for automated Go code review on GitHub PRs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "github", "code-review", "golang", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/github-pr-reviewer-mcp"
Documentation = "https://github.com/yourusername/github-pr-reviewer-mcp#readme"
Repository = "https://github.com/yourusername/github-pr-reviewer-mcp"

[project.scripts]
github-pr-mcp = "github_pr_mcp:main"
